# rust-email-service

./: .editorconfig  Cargo.toml  README.md  cog.toml
.github/workflows/: general.yml
src/: main.rs
tests/: health_check.rs
